# mezzanine

./: .gitignore  README.md  minerl_mezzanine_distill.py  pyproject.toml
.github/workflows/: ci.yml
configs/: iphyre.yml  lerobot_aloha_sim_transfer_cube_scripted_image.yml  lerobot_libero_10_image_subtask.yml  lerobot_pusht_image.yml
docs/: llm_examples.md  physics_addons.md  plugin_api.md
examples/: README.md  api_measure_text_order.py  cg_fused_kernel_demo.py  eigen_generate_dataset.py  integration_generate_dataset.py  kepler_generate_dataset.py  linear_system_generate_dataset.py  lj_generate_dataset.py  llm_boolq_order_gap.py  ode_generate_dataset.py  pdebench_inspect_h5.py
examples/data/: README.md  spy_daily_ohlcv.csv
mezzanine/: __init__.py  api.py  cli.py  plugins.py  registry.py
mezzanine/kernels/pearl_pow_kernels/: README.md  __init__.py  pyproject.toml
mezzanine/kernels/pearl_pow_kernels/pearl_pow_kernels/: __init__.py  fp4.py  fp4_gemm.py  gemm_triton_fused.py  hadamard.py  hash128.py  poi.py  qnoise_gemm.py  quant.py  rng.py  rot_gemm.py  trace.py  train_pow.py
mezzanine/kernels/pearl_pow_kernels/tests/: test_fp4_gemm.py  test_hash128.py  test_qnoise_gemm.py  test_rot_gemm.py  test_train_pow.py
numerical_visualiser/: __init__.py  common.py  generate_hero_gifs.py
out_depth_warrant/: results.json
out_depth_warrant_diverse/: results.json
out_depth_warrant_topdown/: results.json
out_depth_weighted_d4/: results.json
out_distill_frozen_200/: results.json
out_distill_orbit/: results.json
scripts/: distill_depth_equivariance.py  distill_frozen_head.py  distill_orbit_average.py  evaluate_student_quality.py  finetune_depth_consistency.py  finetune_depth_consistency_v2.py  measure_depth_warrant_gap.py  preflight.sh  run_ablations.py  run_alpha_ablations.py  run_crystal_spacegroup_suite.py  run_robot_suite.sh  visualize_depth_comparison.py  viz_distill_results.py  weighted_orbit_average.py
test_images/: download_diverse.py  download_topdown.py
tests/: test_audio_dataset_adapters.py  test_audio_warrant_mix.py  test_crystal_spacegroup_view_augmentation.py  test_depth_geometric.py  test_examples_dataset_cli_compat.py  test_finance_csv_bar_offset_distill.py  test_gw_psi4_vtk.py  test_gw_smbh_viz_exports.py  test_neuralgcm_ens_warrant_distill_smoke.py  test_neuralgcm_wiring.py  test_pdebench_translation_distill_legacy_args.py  test_qg_jets_wiring.py  test_time_origin_shift_bounds.py
(+111 files in other folders)
